<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_boton"
            android:icon="@drawable/alerta"
            android:iconTint="#A85E0F"
            android:iconTintMode="screen"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_informacion"
            android:icon="@drawable/acosomenu"
            android:iconTint="#A85E0F"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_estadisticas"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:iconTint="#A85E0F"
            android:title="@string/menu_slideshow" />
    </group>
</menu>