<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_boton">

    <fragment
        android:id="@+id/nav_boton"
        android:name="com.example.proyectofinal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_boton" />

    <fragment
        android:id="@+id/nav_informacion"
        android:name="com.example.proyectofinal.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_informacion" />

    <fragment
        android:id="@+id/nav_estadisticas"
        android:name="com.example.proyectofinal.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_estadisticas" />
</navigation>