<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <TextView
        android:id="@+id/nova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/nova"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="167dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/usuarioc" />

    <TextView
        android:id="@+id/Nombre"
        android:layout_width="219dp"
        android:layout_height="55dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/Nombre"
        android:inputType="text"
        android:textColor="#9F715D"
        android:textColorHighlight="#9F715D"
        android:textColorHint="#9F715D"
        android:textColorLink="#9F715D"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/Apellido"
        android:layout_width="219dp"
        android:layout_height="55dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/Apellido"
        android:inputType="text"
        android:textColor="#9F715D"
        android:textColorHighlight="#9F715D"
        android:textColorHint="#9F715D"
        android:textColorLink="#9F715D"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <TextView
        android:id="@+id/Correo"
        android:layout_width="219dp"
        android:layout_height="55dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/Correo"
        android:inputType="text"
        android:textColor="#9F715D"
        android:textColorHighlight="#9F715D"
        android:textColorHint="#9F715D"
        android:textColorLink="#9F715D"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

    <TextView
        android:id="@+id/Identificacion"
        android:layout_width="219dp"
        android:layout_height="55dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/Identificacion"
        android:inputType="text"
        android:textColor="#9F715D"
        android:textColorHighlight="#9F715D"
        android:textColorHint="#9F715D"
        android:textColorLink="#9F715D"

        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782" />


    <Button
        android:id="@+id/historial"
        style="@style/Widget.AppCompat.Button.Colored"

        android:layout_width="269dp"
        android:layout_height="56dp"
        android:background="@drawable/borderboton"
        android:backgroundTint="#A5775A"
        android:fontFamily="casual"
        android:text="@string/Historial"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#9F715D"
        android:textColorHint="#9F715D"
        android:textColorLink="#9F715D"
        android:textSize="20sp"
        android:textStyle="bold"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

</androidx.constraintlayout.widget.ConstraintLayout>



